--- a/flip.html
+++ b/flip.html
@@ -12,6 +12,11 @@
 </style>
 </head>
 <body>
+
+	<!-- exemplos
+		http://www.maujor.com/tutorial/exemplo-flipping.php
+		https://codepen.io/shayhowe/pen/Fvjnf
+	-->
 <div class="tudo">  	
 	<div class="box left um">
 	<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
